FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20201022:
AUTHOR: bapt@FreeBSD.org

  New @rmempty keyword
  Its purpose is to delete empty files at deinstallation time. It is meant
  to be used for generated files/untracked by the package manager files.

  It respects rootdir

20201022:
AUTHOR: bapt@FreeBSD.org

  @shell has been rewritten in lua
  It provides the exact same feature set as the previous version but it is now
  sandboxed and rootdir compliant (see the pkg -r option).

20201001:
AUTHOR: manu@FreeBSD.org

 The @sample keyword was rewritten in lua.
 It behaves exactly like the previous one but it is sandboxed and
 is rootdir compliant (see pkg -r option).

20201001:
AUTHOR: bapt@FreeBSD.org

  packages scripts and keywords can both be written in lua (version 5.3), see
  pkg-lua-script(5) for the API.

  Note that all scripts written in lua will:

  - run inside a capsicum sandbox,
  - be rootdir compatible (see pkg -r option)
  - be cross installation compatible example: installing packages in an arm64
    rootdir on and amd64 host.

20200531:
AUTHOR: kde@FreeBSD.org

  pyqt.mk gained support for test-only dependencies. If a component, say
  py-qt5-gui is only required for testing, you can add

    USE_PYQT=<other_deps> gui_test

20200514:
AUTHOR: mat@FreeBSD.org

  Add PATCH_CONTINUE_ON_FAIL to allow patching to go through all the patches
  even if one fail.

  This helps when upgrading ports with a large number of patches, like
  www/chromium where having to fix one patch, re-do the patching, fix the
  fallout, 800 times, is really painful.

20200414:
AUTHOR: bapt@FreeBSD.org

  package scripts can now be done in lua, the following are supported:

  - pkg-pre-install.lua