@@ -10,16 +10,8 @@ MASTER_SITES=	SF/${PORTNAME:tl}/${PORTNAME:tl}/3.100
 MAINTAINER=	netchild@FreeBSD.org
 COMMENT=	Fast MP3 encoder kit
 
-LICENSE=		LGPL20+ PATENTS
-LICENSE_COMB=		multi
-LICENSE_NAME_PATENTS=	Intellectual Property Precaution
-LICENSE_FILE_LGPL20+ =	${WRKSRC}/COPYING
-LICENSE_FILE_PATENTS=	${FILESDIR}/lame_patents.txt
-LICENSE_PERMS_PATENTS=	dist-mirror dist-sell no-pkg-mirror no-pkg-sell auto-accept
-# The reason for "no-pkg" was discussed with core:
-# Core feels that the risk versus any potential benefit is not in the
-# project's best interest and we should continue to not package
-# audio/lame.
+LICENSE=		LGPL20+
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		iconv libtool
 USE_LDCONFIG=	yes
