@@ -10,16 +10,8 @@ PKGNAMEPREFIX=	fusefs-
 MAINTAINER=	samm@FreeBSD.org
 COMMENT=	Full-featured exFAT FS implementation as a FUSE module
 
-LICENSE=	GPLv2+ MSPAT
-LICENSE_COMB=	multi
-LICENSE_NAME_MSPAT=	Microsoft exFAT Patent License
-LICENSE_TEXT_MSPAT=	It is important to note that open source and other publicly \
-			available implementations of exFAT do not include a patent \
-			license from Microsoft. A license is required in order to \
-			implement exFAT and use it in a product or device. \
-	https://www.microsoft.com/en-us/legal/intellectualproperty/mtl/exfat-licensing.aspx
-LICENSE_FILE_GPLv2+ =	${WRKSRC}/COPYING
-LICENSE_PERMS_MSPAT=	no-dist-mirror no-dist-sell no-pkg-mirror no-pkg-sell
+LICENSE=	GPLv2+
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libublio.so:devel/libublio
 
